<resources>
    <string name="app_name">MovieProject</string>
    <string name="no_movies">No movies to show.</string>
    <string name="no_internet">Internet connection required.</string>
    <string name="movie_image">It is a movie\'s poster image</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="movie_trailer">It is a movie\'s trailer</string>
    <string name="movie_reviews">Reviews</string>
    <string name="movie_favourite">Favourite</string>
    <string name="content">Contents</string>
    <string name="author">Author</string>
    <string name="overview">Overview</string>3
    <string name="average_vote">Average Vote</string>
    <string name="movie_release_date">Movie\'s release date</string>
    <string name="title">Title</string>
    <string name="youtube_button">Youtube Button</string>
</resources>
