<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_trailer"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/movie_trailer"/>

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:id="@+id/youtube_button"
                android:src="@drawable/ic_youtube_button"
                android:visibility="invisible"
                tools:text="@string/youtube_button"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/movie_image"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="@string/movie_release_date" />

                <TextView
                    android:id="@+id/movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="@string/average_vote" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/heart_button"
                    android:layout_gravity="center"/>
            </FrameLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="@string/overview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/movie_reviews"
                android:layout_marginBottom="8dp"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/content"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/author1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/author"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>